--- a/index.html
+++ b/index.html
@@ -364,5 +364,17 @@
   </div>
   </div>
   </footer>
+    <div class="backdrop">
+<div class="modal">
+<button type="button" class="modal-close-button">
+<svg class="modal-close-button-icon" width="8" height="8">
+  <use href="./images/icons.svg#icon-modal-close">
+
+  </use>
+</svg>
+
+</button>
+</div>
+  </div>
 </body>
 </html>
