--- a/portfolio.html
+++ b/portfolio.html
@@ -50,7 +50,12 @@
     <ul class=" img list">
       <li class="total-information">
          <a class="total-information-link link" href="" >
+          <div>
            <img src="./images/galary/1.jpg" alt="banking app interface concept" width="360"> 
+           <p>
+            
+           </p>
+          </div>
            <div class="wrapper">
            <h2 class="names">Banking App Interface Concept</h2>
             <p class="task">App</p>
