--- a/portfolio.html
+++ b/portfolio.html
@@ -53,7 +53,7 @@
           <div>
            <img src="./images/galary/1.jpg" alt="banking app interface concept" width="360"> 
            <p>
-            
+            14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
            </p>
           </div>
            <div class="wrapper">
