--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <nav class="navigation">
         <a class="body-logo link" href="./index.html" >Web<span class="body-web-name">Studio</span></a>
         <ul class="menu list">
-          <li ><a class="body-nav-link link" href="./index.html">Studio</a></li>
+          <li class="menu-body-nav-link"><a class="body-nav-link link" href="./index.html">Studio</a></li>
           <li ><a class="body-nav-link link" href="./portfolio.html">Portfolio</a></li>
           <li ><a class="body-nav-link link" href="">Contacts</a></li>
         </ul>
