--- a/portfolio.html
+++ b/portfolio.html
@@ -22,8 +22,8 @@
         <a class="logo link" href="./index.html" >Web<span class="web-name">Studio</span></a>
         <ul class="menu list">
           <li class="features-portfolio-menu" ><a class="nav-link link" href="./index.html" >Studio</a></li>
-          <li class="features-portfolio-menu"> <a class="nav-link link" href="./portfolio.html" >Portfolio</a></li>
-          <li class="features-portfolio-menu"> <a class="nav-link link" href="">Contacts</a> </li>
+          <li > <a class="nav-link link" href="./portfolio.html" >Portfolio</a></li>
+          <li > <a class="nav-link link" href="">Contacts</a> </li>
         </ul>
     </nav>  
     <address class="connection">
