--- a/index.html
+++ b/index.html
@@ -364,9 +364,9 @@
   </div>
   </div>
   </footer>
-<div class="backdrop">
+<div class="backdrop" atr="data-modal">
 <div class="modal">
-<button type="button" class="modal-close-button">
+<button type="button" class="modal-close-button" atr="data-modal-open">
 <svg class="modal-close-button-icon" width="8" height="8">
   <use href="./images/icons.svg#icon-modal-close">
 
