--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   <section class="main-section ">
     <div class="section container">
   <h1 class="main-title">Effective Solutions for Your Business </h1>
-  <button class=" button" type="button">Order Service</button>
+  <button class=" button" type="button" data-modal-open>Order Service</button>
 </div>
 </section>
   <section class="achivement ">
@@ -364,9 +364,9 @@
   </div>
   </div>
   </footer>
-<div class="backdrop" atr="data-modal">
+<div class="backdrop" data-modal>
 <div class="modal">
-<button type="button" class="modal-close-button" atr="data-modal-open">
+<button type="button" class="modal-close-button" data-modal-open>
 <svg class="modal-close-button-icon" width="8" height="8">
   <use href="./images/icons.svg#icon-modal-close">
 
@@ -376,6 +376,6 @@
 </button>
 </div>
   </div>
-  <script type="text/javascript" src="js/script.js">SCRIPT</script>
+  <script src="./js/modal.js"></script>
 </body>
 </html>
