--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
   </div>
   </div>
   </footer>
-<div class="backdrop" data-modal>
+<div class="backdrop is-hidden" data-modal>
 <div class="modal">
 <button type="button" class="modal-close-button" data-modal-open>
 <svg class="modal-close-button-icon" width="8" height="8">
