--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
   </footer>
 <div class="backdrop is-hidden" data-modal>
 <div class="modal">
-<button type="button" class="modal-close-button" data-modal-open>
+<button type="button" class="modal-close-button" data-modal-close>
 <svg class="modal-close-button-icon" width="8" height="8">
   <use href="./images/icons.svg#icon-modal-close">
 
