--- a/portfolio.html
+++ b/portfolio.html
@@ -50,9 +50,9 @@
     <ul class=" img list">
       <li class="total-information">
          <a class="total-information-link link" href="" >
-          <div>
+          <div class="total-information-list">
            <img src="./images/galary/1.jpg" alt="banking app interface concept" width="360"> 
-           <p>
+           <p class="overlay">
             14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
            </p>
           </div>
