--- a/portfolio.html
+++ b/portfolio.html
@@ -21,7 +21,7 @@
     <nav class="navigation">
         <a class="logo link" href="./index.html" >Web<span class="web-name">Studio</span></a>
         <ul class="menu list">
-          <li class="features-portfolio-menu" ><a class="nav-link link" href="./index.html" >Studio</a></li>
+          <li class="features-portfolio-menu" ><a class="nav-link curent link" href="./index.html" >Studio</a></li>
           <li > <a class="nav-link link" href="./portfolio.html" >Portfolio</a></li>
           <li > <a class="nav-link link" href="">Contacts</a> </li>
         </ul>
